syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "User";

package com.woofate.dubbo.tri;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service UserService {

  rpc sayHi(HelloRequest) returns (HelloReply);

}
